# rgp-wag

./: .gitignore  AGENTS.md  ANTISPAM.md  AUDIT.md  DEPLOYMENT_DEMO_GUIDE.md  README_DEPLOY_EC2.md  RGP_Backend_Billing.xlsx  db.sqlite3  deploy-front.ps1  deploy.bat  deploy.md  render.yaml  rgp_data.json  rgp_data_clean.json  test-postman.json  wrangler.jsonc
backend/: .env.example  manage.py  pyproject.toml  requirements.txt
backend/apps/core/: models.py  wagtail_hooks.py
backend/apps/core/migrations/: 0001_initial.py  0002_legalsettings.py  0002_video.py  0003_legalsettings_default_content.py  0004_legalsettings_fix_br_tags.py
backend/apps/forms/: api.py  apps.py  models.py  serializers.py  spam.py  wagtail_hooks.py
backend/apps/forms/migrations/: 0001_initial.py  0002_expressionofinterestsubmission_address_buyer_1_and_more.py  0003_backfill_eoi_structured_fields.py  0004_clear_legacy_eoi_message_blob.py  0005_propertyenquirysubmission.py  0006_propertyenquirysubmission_agent_name.py
backend/apps/home/: api.py  blocks.py  models.py  serializers.py  wagtail_hooks.py
backend/apps/properties/: api.py  apps.py  models.py  serializers.py  sitemap.py  vaultre.py  wagtail_hooks.py
backend/apps/team/: apps.py  models.py  wagtail_hooks.py
backend/apps/testimonials/: api.py  models.py  wagtail_hooks.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  demo.py  dev.py  production.py
backend/rgp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/templates/wagtailadmin/: brand.html  login.html  team_member_index.html
(+243 files in other folders)
